--- a/index.html
+++ b/index.html
@@ -38,19 +38,19 @@
                 <li><a href="#test">
                         TESTIMONIALS
                     </a></li>
-             
-            <div class="hover2">
-                <li>
-                    <a href="login">DROP DOWN</a>
-                </li>
-                <ul class="dropdown2">
-                    <li><a href="#">ABOUT US</a></li><br>
-                    <li><a href="#">FEATURES</a></li><br>
-                    <li><a href="#">FAQ's</a></li><br>
-                    <li><a href="#">BLOG</a></li><br>
 
-                </ul>
-            </div>
+                <div class="hover2">
+                    <li>
+                        <a href="login">DROP DOWN</a>
+                    </li>
+                    <ul class="dropdown2">
+                        <li><a href="#">ABOUT US</a></li><br>
+                        <li><a href="#">FEATURES</a></li><br>
+                        <li><a href="#">FAQ's</a></li><br>
+                        <li><a href="#">BLOG</a></li><br>
+
+                    </ul>
+                </div>
                 <li><a href="#contact">
                         CONTACT US
                     </a></li>
@@ -164,7 +164,8 @@
                         <div class="carousel-item active">
                             <div class="car">
                                 <div class="author1">
-                                    <img src="./testimonial-author-1.png" alt=""  style="position: absolute;left: 7%;top: -20%;height: 120px;width: 120px;">
+                                    <img src="./testimonial-author-1.png" alt=""
+                                        style="position: absolute;left: 7%;top: -20%;height: 120px;width: 120px;">
                                     <i class='bx bxs-star'></i>
                                     <i class='bx bxs-star'></i>
                                     <i class='bx bxs-star'></i>
@@ -179,7 +180,8 @@
 
                                 </div>
                                 <div class="author2">
-                                    <img src="./testimonial-author-1.png" alt=""  style="position: absolute;left: -14%;top: -20%;height: 120px;width: 120px;">
+                                    <img src="./testimonial-author-1.png" alt=""
+                                        style="position: absolute;left: -14%;top: -20%;height: 120px;width: 120px;">
 
                                     <i class='bx bxs-star'></i>
                                     <i class='bx bxs-star'></i>
@@ -199,7 +201,8 @@
                         <div class="carousel-item">
                             <div class="car">
                                 <div class="author1">
-                                    <img src="./testimonial-author-1.png" alt=""  style="position: absolute;left: 7%;top: -20%;height: 120px;width: 120px;">
+                                    <img src="./testimonial-author-1.png" alt=""
+                                        style="position: absolute;left: 7%;top: -20%;height: 120px;width: 120px;">
 
                                     <i class='bx bxs-star'></i>
                                     <i class='bx bxs-star'></i>
@@ -215,7 +218,8 @@
 
                                 </div>
                                 <div class="author2">
-                                    <img src="./testimonial-author-1.png" alt=""  style="position: absolute;left: -14%;top: -20%;height: 120px;width: 120px;">
+                                    <img src="./testimonial-author-1.png" alt=""
+                                        style="position: absolute;left: -14%;top: -20%;height: 120px;width: 120px;">
 
                                     <i class='bx bxs-star'></i>
                                     <i class='bx bxs-star'></i>
@@ -235,7 +239,8 @@
                         <div class="carousel-item">
                             <div class="car">
                                 <div class="author1">
-                                    <img src="./testimonial-author-1.png" alt=""  style="position: absolute;left: 7%;top: -20%;height: 120px;width: 120px;">
+                                    <img src="./testimonial-author-1.png" alt=""
+                                        style="position: absolute;left: 7%;top: -20%;height: 120px;width: 120px;">
 
                                     <i class='bx bxs-star'></i>
                                     <i class='bx bxs-star'></i>
@@ -251,7 +256,8 @@
 
                                 </div>
                                 <div class="author2">
-                                    <img src="./testimonial-author-1.png" alt=""  style="position: absolute;left: -14%;top: -20%;height: 120px;width: 120px;">
+                                    <img src="./testimonial-author-1.png" alt=""
+                                        style="position: absolute;left: -14%;top: -20%;height: 120px;width: 120px;">
 
                                     <i class='bx bxs-star'></i>
                                     <i class='bx bxs-star'></i>
