--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
                 <div class="hover2">
                     <li>
-                        <a href="login">DROP DOWN</a>
+                        <a href="#">DROP DOWN</a>
                     </li>
                     <ul class="dropdown2">
                         <li><a href="#">ABOUT US</a></li><br>
